[metadata]
name = lib0koe
version = %%version%%
summary = Bunch of function used daily at 0k when dealing with OpenERP
description-file =
    README.rst
    CHANGELOG.rst
# requires-dist =
#     pyyaml
#     simplejson

## sdist info
author = Valentin Lab
author_email = valentin.lab@kalysto.org
home_page = http://github.com/0k/lib0koe
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)


[files]
packages-root = src
packages = lib0koe
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py

[nosetests]
verbosity=3
with-doctest=1
doctest-extension=rst
#doctest-options='+ELLIPSIS,+NORMALIZE_WHITESPACE'
